# ls-configs

./: .gitignore  list-changed-configs.cabal  list-changed-configs.test  ls-configs.cabal  notes.md  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Sgf/Control/: Lens.hs
src/Sgf/System/: Configs.hs
src/Sgf/System/Configs/: Common.hs  Database.hs  Options.hs  Parser.hs  System.hs  Types.hs
test/: Spec.hs  dpkg-query.txt  filter.txt  list-changed-configs.test  ls-configs.test
test/etc/: bash.bashrc  bash_completion  shells  unburden-home-dir.list
test/etc-dst/apache2/sites-available/: default  default-ssl
test/etc-dst/apt/: 05aptitude
test/etc-dst/bash_completion.d/: gsettings
test/etc-dst/vim/: gvimrc.orig  vimrc
test/etc/apache2/sites-available/: default-ssl
test/etc/apt/apt.conf.d/: 05aptitude
test/etc/vim/: gvimrc
test/etc/zsh/: zlogout  zshenv  zshenv.orig
