name:                list-changed-configs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/list-changed-configs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Sgf.System.Configs
                        Sgf.System.Configs.Types
                        Sgf.System.Configs.Common
                        Sgf.System.Configs.Parser
                        Sgf.System.Configs.System
                        Sgf.System.Configs.Database
                        Sgf.System.Configs.Options
  other-modules:        Sgf.Control.Lens
  build-depends:        base >= 4.7 && < 5
                        , turtle
                        , attoparsec
                        , bytestring
                        , text
                        , mtl
                        , containers
                        , transformers
                        , unix
                        , foldl
                        , system-filepath
                        , optparse-applicative
                        , aeson
  ghc-options:          -Wall
  default-language:     Haskell2010

executable list-changed-configs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , list-changed-configs
  default-language:    Haskell2010

test-suite list-changed-configs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                       , text
                       , turtle
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/list-changed-configs
